fix modal size on mobile

--- a/src/sass/components/_reactmodal.scss
+++ b/src/sass/components/_reactmodal.scss
@@ -1,13 +1,16 @@
 .ReactModal__Overlay {
   margin: 0 auto;
   max-width: 1240px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 
   .ReactModal__Content {
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 0;
-    max-height: 70vh;
+    max-height: 600px;
     max-width: 80%;
     margin: auto;
     color: white;
@@ -32,6 +35,13 @@
 }
 
 @media (max-width: 780px) {
+  .ReactModal__Overlay {
+    .ReactModal__Content {
+      max-height: 100%;
+      max-width: 100%;
+    }
+  }
+
   .ReactModal__Overlay .ReactModal__Content img {
     object-fit: contain;
     width: 100%;
